@@ -1,1 +1,1 @@
-This is still unfinished.
+See the pod or the Changes file.
