@@ -1,3 +1,6 @@
+3 To Me You Are A Work Of Art - Thu Mar 20 17:39:00 EDT 2008
+	- File uploads included on the write method.
+
 2 "Island In A Sun"	- Thu Mar 20 12:52:34 EDT 2008
 	- Mostly complete, only file uploads missing.
 
